# IonicNotif

./: .gitignore  README.md
ionic-maps-backend/: .dockerignore  .env.example  .gitignore  =0.8.0  DOCKER_DIAGNOSIS.md  Dockerfile  LOGISTICS_SAAS_BLUEPRINT.md  README.md  docker-compose.yml  mcp_server.py  nixpacks.toml  pyproject.toml  railpack.json  requirements.txt  run.py  start.sh  test_caitlyn_radar.py  test_caitlyn_search.py  train_ai.py
ionic-maps-backend/app/: __init__.py  config.py  database.py  main.py
ionic-maps-backend/app/ai/: carriers.json  config.json  dataset.json
ionic-maps-backend/app/models/: schemas.py
ionic-maps-backend/app/routers/: agent.py  convoy.py  favorites.py  incidents.py  routes.py  scraper.py  settings.py  translator.py  trips.py  weather.py
ionic-maps-backend/app/scrapers/: docs_scraper_service.py  ocr_service.py  playwright_service.py  port_utils.py  smart_finder.py  som_utils.py
ionic-maps-backend/app/services/: agent_service.py  business_service.py  caitlyn_vision_service.py  hive_service.py  incident_service.py  invoice_service.py  logistics_service.py  market_service.py  ml_service.py  routing_service.py  scraper_ai_service.py  search_service.py  settings_service.py  shopping_service.py  socket_service.py  trip_service.py  ventas_notebook_service.py  web_search_service.py
ionic-maps-backend/app/services/ai/: agent_service.py  ml_service.py  scraper_ai_service.py
ionic-maps-backend/app/services/core/: favorite_service.py  weather_service.py  web_search_service.py
ionic-maps-backend/app/services/kitchy/: business_service.py  invoice_service.py  market_service.py
ionic-maps-backend/app/services/logistics/: direct_scraper_service.py  logistics_service.py
ionic-maps-backend/app/utils/: holidays.py
(+54 files in other folders)
