[project]
name = "ionic-maps-backend"
version = "1.0.0"
description = "Backend para IonicNotif Maps con IA y Hive"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.30.0",
    "motor>=3.3.2",
    "pymongo>=4.6.1",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "numpy>=1.26.4",
    "joblib>=1.3.2",
    "python-multipart>=0.0.9",
    "mcp[cli]>=1.0.0",
    "google-generativeai>=0.8.0",
]
