[project]
name = "ionic-maps-backend"
version = "1.0.0"
description = "Backend para IonicNotif Maps con IA y Hive"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.30.0",
    "motor>=3.3.2",
    "pymongo>=4.6.1",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "numpy>=1.26.4",
    "joblib>=1.3.2",
    "python-multipart>=0.0.9",
    "mcp[cli]>=1.0.0",
    "google-genai>=0.1.0",
    "duckduckgo-search>=8.1.1",
    "rapidfuzz>=3.0.0",
    "opencv-python-headless>=4.9.0",
    "cohere>=5.0.0",
    "playwright>=1.42.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "easyocr>=1.7.1",
    "playwright-stealth>=2.0.3",
    "pyvirtualdisplay>=3.0",
    "google-generativeai>=0.8.6",
    "pillow>=12.2.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
